[gd_scene load_steps=2 format=3 uid="uid://caemshoneox7b"]

[ext_resource type="Script" path="res://src/ui/popup_confirm_box/popup_confirm_box_manager.gd" id="1_0xlnq"]

[node name="PopupConfirmBox" type="CanvasLayer"]
script = ExtResource("1_0xlnq")

[node name="BoxWindow" type="ColorRect" parent="."]
anchors_preset = -1
anchor_left = 0.185
anchor_top = 0.35
anchor_right = 0.815
anchor_bottom = 0.5
size_flags_vertical = 3
color = Color(0.22, 0.22, 0.22, 1)

[node name="InfoTextLabel" type="Label" parent="BoxWindow"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.65
theme_override_font_sizes/font_size = 30
text = "Press \"Confirm\" to procced."
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="BoxWindow"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.65
anchor_right = 1.0
anchor_bottom = 0.9
theme_override_constants/separation = 100
alignment = 1

[node name="ConfirmButton" type="Button" parent="BoxWindow/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Confirm"

[node name="CancelButton" type="Button" parent="BoxWindow/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Cancel"
